# cashersize

./: CMakeLists.txt  README.md  initial-setup.json
examples/: CMakeLists.txt  admin.cpp  client.cpp  server.cpp
include/cachersize/: Admin.hpp  AsyncRequest.hpp  Backend.hpp  CacheHandle.hpp  Client.hpp  Exception.hpp  Provider.hpp  ProviderHandle.hpp  RequestResult.hpp  UUID.hpp
src/: Admin.cpp  AdminImpl.hpp  AsyncRequest.cpp  AsyncRequestImpl.hpp  Backend.cpp  BedrockModule.cpp  CMakeLists.txt  CacheHandle.cpp  CacheHandleImpl.hpp  Client.cpp  ClientImpl.hpp  Provider.cpp  ProviderImpl.hpp  cachersize-admin.pc.in  cachersize-client.pc.in  cachersize-config.cmake.in  cachersize-server.pc.in
src/dummy/: DummyBackend.cpp  DummyBackend.hpp
tests/: AdminTest.cpp  CMakeLists.txt  CacheTest.cpp  ClientTest.cpp  Main.cpp
